# ChainLens

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
chainlens/: __init__.py
chainlens/api/: main.py
chainlens/app/: workbench.py
chainlens/data/: elliptic.py  scenario.py  tron.py
chainlens/explain/: evidence.py  screening.py
chainlens/models/: gcn.py  sage.py  train.py
chainlens/sna/: community.py  metrics.py  motifs.py
docs/: DEMO_SCRIPT.md  RESEARCH.md
docs/superpowers/plans/: 2026-07-02-chainlens-mvp.md
research/: fields.yaml  generate_report.py  outline.yaml  report.md
research/results/: Commercial_blockchain_analytics_systems.json  Elliptic_Dataset_and_Weber_et_al_2019_foundations.json  Elliptic_plusplus_and_Elliptic2_datasets.json  Ethereum_phishing_and_scam-token_detection.json  GNN_explainability_for_AML_and_fraud.json  Heterophily_and_camouflage-aware_fraud_GNNs.json  IBM_AMLworld_and_Multi-GNN_directed_multigraphs.json  LLM_plus_graph_fraud_investigation_agents.json  Low-label_and_imbalance_strategies_on_Elliptic.json  Money-laundering_motif_and_typology_detection.json  Scalability_federation_and_privacy_in_AML_graph_ML.json  Survey_anchor_GNN_financial_fraud_detection_review.json  TRON_USDT_stablecoin_fraud_flow_studies.json  Temporal_GNNs_for_transaction_graphs.json
tests/: conftest.py  test_api.py  test_community.py  test_elliptic.py  test_evidence.py  test_metrics.py  test_models.py  test_motifs.py  test_screening.py  test_tron.py
