[project]
name = "chainlens"
version = "0.1.0"
description = "SNA + GNN based crypto fraud money-flow detection platform (FinTech Taipei Awards 2026)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "networkx>=3.2",
    "python-louvain>=0.16",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "torch-geometric>=2.5",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "streamlit>=1.33",
    "pyvis>=0.3.2",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chainlens"]
